--- a/style.css
+++ b/style.css
@@ -35,26 +35,6 @@ nav{
     font-size: 16px;
 }
 
-/* Center underline animation
-.nav-links ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #82FFD8;
-    display: block;
-    margin: auto;
-}
-.nav-links ul li:hover::after{
-    content: '';
-    width: 100%;
-    height: 2px;
-    background: #82FFD8;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-*/
-
 /* Left underline animation */
 .nav-links ul li::after{
     content: '';
@@ -99,23 +79,22 @@ nav{
     font-size: 80px;
     font-weight: 600;
     line-height: 0.8;
-    color: #dfe7ee;
+    color: #D3E1EF;
 }
 .text-box pTagline{
     font-size: 72px;
     font-weight: 500;
     line-height: 1.5;
-    color: #b7c5d3;
+    color: #B7C5D3;
 }
 .text-box p{
     font-size: 18px;
     inline-size: 30em;
     line-height: 1.75;
-    color: #b7c5d3;
+    color: #B7C5D3;
 }
 
 /*Welcome button*/
-
 .welcome-btn{
     display: inline-block;
     text-decoration: none;
@@ -137,10 +116,11 @@ nav{
     transition: 1s;
 }
 
+nav .fa-solid{
+    display: none;
+}
 
 /*Mobile support*/
-
-
 @media(max-width: 700px){
     /*Title text*/
     .text-box{
@@ -149,7 +129,7 @@ nav{
         width: auto;
         height: auto;
         top: 10vh;
-        left: 7vw;
+        left: 6vw;
         color: #b7c5d3;
     }
 
@@ -162,7 +142,7 @@ nav{
         font-size: 40px;
         font-weight: 600;
         line-height: 0.75;
-        color: #dfe7ee;
+        color: #D3E1EF;
     }
     .text-box pTagline{
         font-size: 36px;
@@ -178,7 +158,6 @@ nav{
     }
 
     /*Welcome button*/
-
     .welcome-btn{
         display: inline-block;
         text-decoration: none;
@@ -199,19 +178,57 @@ nav{
         color: #1d252c;
         transition: 1s;
     }
-    /*.nav-links ul li{
+
+    /*Navigation*/
+    .nav-links ul li{
         display: block;
+        background-color: #323B42;
+        text-align: center;
+        padding-top: 40px;
     }
     .nav-links{
-        display: block;
-        position: relative;
-        background: #AD0000;
+        position: absolute;
+        background: #323B42;
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
-    }*/
-
+        padding: 30;
+        transition: 1s;
+    }
+    nav .fa-solid{
+        display: block;
+        color: #D3E1EF;
+        background: transparent;
+        padding: 20px;
+        margin: 0px;
+        font-size: 35px;
+        cursor: pointer;
+    }
+    .nav-links ul li a{
+        background: transparent;
+    }
+    /* Left underline animation */
+    .nav-links ul li::after{
+        content: '';
+        width: 0%;
+        height: 2px;
+        background: #82FFD8;
+        display: block;
+        margin: auto;
+        position: relative;
+    }
+    .nav-links ul li:hover::after{
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: #82FFD8;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+        transform: scaleX(0.25);
+        transform-origin: bottom center;
+    }
 }
