--- a/style.css
+++ b/style.css
@@ -5,11 +5,28 @@
     background-color: #1d252c;
 }
 
+html{
+    scroll-behavior: smooth
+}
+
+body::-webkit-scrollbar {
+    width: 0.4em;
+}
+
+    body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px transparent;
+} 
+body::-webkit-scrollbar-thumb {
+    background-color: #b7c5d3;
+    border-radius: 5px;
+}
+
 /*------------------------------------------------------------------*?
 
 /*Homepage*/
 .home-page{
-    min-height: 100vh;
+    min-height: 80vh;
+    height: auto;
     width: 100%;
     position: relative;
     overflow: hidden;
@@ -127,7 +144,8 @@ nav .fa-solid{
 
 /*About Me*/
 .about-me{
-    min-height: 100vh;
+    min-height: 80vh;
+    height: auto;
     width: 100%;
     position: relative;
     overflow: hidden;
@@ -202,7 +220,8 @@ nav .fa-solid{
 
 /*Projects*/
 .projects{
-    min-height: 100vh;
+    min-height: 80vh;
+    height: auto;
     width: 100%;
     position: relative;
     overflow: hidden;
@@ -230,7 +249,142 @@ nav .fa-solid{
     line-height: 1.5;
     color: #D3E1EF;
 }
+.projects-text p3{
+    font-size: 18px;
+    inline-size: 40em;
+    line-height: 1.5;
+    color: #82FFD8;
+}
+.projects-text p4 a{
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #b7c5d3;
+    text-decoration: none;
+}
+/* Left underline animation */
+.projects-text p4 a::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #82FFD8;
+    display: block;
+    margin: auto;
+    position: absolute;
+}
+.projects-text p4 a:hover::after{
+    content: '';
+    width: 25%;
+    height: 2px;
+    background: #82FFD8;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+    transform: scaleX(0.75);
+    transform-origin: bottom left;
+}
+.projects-text img.EZHotkey{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: -10em;
+    left: 30em;
+}
+.projects-text p5{
+    position: relative;
+    top: 5em;
+    left: 0em;
+    width: 30em;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: 10px;
+    color: #b7c5d3;
+    display: inline-block;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background: #2F4858;
+    z-index: 1;
+}
 
+/*------------------------------------------------------------------*?
+
+/*Other  projects*/
+.other-projects{
+    min-height: 80vh;
+    height: auto;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.other-projects-text p1{
+    display: inline-block;
+    text-align: center;
+    font-size: 40px;
+    line-height: 1.5;
+    color: #b7c5d3;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.other-projects-text p2 a{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-160%, -85%);
+    text-decoration: none;
+    width: 20em;
+    height:20em;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: 10px;
+    color: #b7c5d3;
+    display: inline-block;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background: #2F4858;
+}
+.other-projects-text p3 a{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -85%);
+    text-decoration: none;
+    width: 20em;
+    height:20em;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: 10px;
+    color: #b7c5d3;
+    display: inline-block;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background: #2F4858;
+}
+.other-projects-text p4 a{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(60%, -85%);
+    text-decoration: none;
+    width: 20em;
+    height:20em;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: 10px;
+    color: #b7c5d3;
+    display: inline-block;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background: #2F4858;
+}
 /*------------------------------------------------------------------*?
 
 /*Mobile support*/
@@ -351,27 +505,96 @@ nav .fa-solid{
     .about-text{
         position:relative;
         display: inline-block;
+        min-height: 100vh;
         width: auto;
         height: auto;
         top: 10vh;
         left: 0vw;
         color: #b7c5d3;
-        padding-inline: 20px;
         word-wrap: break-word;
-        padding-bottom: 60px;
+        padding-bottom: 10vh;
     }
 
     /*Projects*/
     .projects-text{
         position:relative;
         display: inline-block;
+        min-height: 100vh;
         width: auto;
         height: auto;
         top: 10vh;
         left: 0vw;
         color: #b7c5d3;
-        padding-inline: 20px;
         word-wrap: break-word;
-        padding-bottom: 60px;
+        padding-bottom: 10vh;
+    }
+    /*Projects*/
+    .projects{
+        min-height: 100vh;
+        width: 100%;
+        position: relative;
+        overflow: hidden;
+    }
+    .projects-text{
+        position:relative;
+        display: inline-block;
+        width: 40em;
+        height: auto;
+        top: 20vh;
+        left: 0vw;
+        color: #b7c5d3;
+        word-wrap: break-word;
+    }
+    .projects-text p3{
+        font-size: 18px;
+        inline-size: 40em;
+        line-height: 1.5;
+        color: #b7c5d3;
+    }
+    .projects-text p4 a{
+        font-size: 30px;
+        font-weight: 500;
+        line-height: 1.5;
+        color: #82FFD8;
+        text-decoration: none;
+        position: relative;
+        top: -4.75em;
+    }
+    .projects-text img.EZHotkey{
+        display: inline-block;
+        width: 50%;
+        height: 50%;
+        position: relative;
+        top: -9em;
+        left: 0em;
+    }
+    .projects-text p5{
+        position: relative;
+        top: 15.5em;
+        left: -9em;
+        width: 19em;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        padding: 10px;
+        color: #b7c5d3;
+        display: inline-block;
+        border: 2px solid transparent;
+        border-radius: 5px;
+        background: #2F4858;
+        z-index: 1;
+    }
+    /*Other  projects*/
+    .other-projects p1{
+        font-size: 24px;
+        line-height: 1.5;
+        color: #b7c5d3;
+        left: 0;
+        position: absolute;
+        text-align: center;
+        font-weight: 500;
+        top: 40em;
+        width: 100%;
+        z-index: 2;
     }
 }
