--- a/style.css
+++ b/style.css
@@ -585,16 +585,79 @@ nav .fa-solid{
         z-index: 1;
     }
     /*Other  projects*/
-    .other-projects p1{
-        font-size: 24px;
+    .other-projects{
+        min-height: 200vh;
+        height: auto;
+        width: 100%;
+        position: relative;
+        overflow: hidden;
+    }
+    .other-projects-text p1{
+        display: inline-block;
+        text-align: center;
+        font-size: 30px;
         line-height: 1.5;
         color: #b7c5d3;
-        left: 0;
+        position: relative;
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+    .other-projects-text p2 a{ /*Left1*/
         position: absolute;
+        top: 50%;
+        left: 50%;
         text-align: center;
-        font-weight: 500;
-        top: 40em;
-        width: 100%;
-        z-index: 2;
+        transform: translate(-50%, -170%);
+        text-decoration: none;
+        width: 20em;
+        height:20em;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        padding: 10px;
+        color: #b7c5d3;
+        display: inline-block;
+        border: 2px solid transparent;
+        border-radius: 5px;
+        background: #2F4858;
+    }
+    .other-projects-text p3 a{ /*Middle1*/
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        text-align: center;
+        transform: translate(-50%, -65%);
+        text-decoration: none;
+        width: 20em;
+        height:20em;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        padding: 10px;
+        color: #b7c5d3;
+        display: inline-block;
+        border: 2px solid transparent;
+        border-radius: 5px;
+        background: #2F4858;
+    }
+    .other-projects-text p4 a{ /*Right1*/
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        text-align: center;
+        transform: translate(-50%, 40%);
+        text-decoration: none;
+        width: 20em;
+        height:20em;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        padding: 10px;
+        color: #b7c5d3;
+        display: inline-block;
+        border: 2px solid transparent;
+        border-radius: 5px;
+        background: #2F4858;
     }
 }
