--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ nav{
     color: #b7c5d3;
     padding-inline: 20px;
     word-wrap: break-word;
+    padding-bottom: 60vh;
 }
 
 .text-box pHi{
@@ -229,7 +230,6 @@ nav .fa-solid{
 }
 .projects-text{
     position:relative;
-    display: inline-block;
     width: 40em;
     height: auto;
     top: 10vh;
@@ -299,12 +299,9 @@ nav .fa-solid{
     transform-origin: bottom left;
 }
 .projects-text img.EZHotkey{
-    display: inline-block;
-    width: 100%;
-    height: 100%;
     position: relative;
-    top: -10em;
-    left: 25em;
+    top: -15vh;
+    left: 20vw;
     border-radius: 10px
 }
 .projects-text p7{
@@ -328,8 +325,8 @@ nav .fa-solid{
 
 /*Other  projects*/
 .other-projects{
-    min-height: 80vh;
-    height: auto;
+    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     position: relative;
     overflow: hidden;
@@ -344,12 +341,11 @@ nav .fa-solid{
     left: 50%;
     transform: translateX(-50%);
 }
-.other-projects-text p2 a{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+.other-projects-text p2 a{ /* Left */
+    position: relative;
+    top: 5em;
+    left: 1%;
     text-align: center;
-    transform: translate(-160%, -65%);
     text-decoration: none;
     width: 20em;
     height:20em;
@@ -363,12 +359,12 @@ nav .fa-solid{
     border-radius: 5px;
     background: #2F4858;
 }
-.other-projects-text p3 a{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+.other-projects-text p3 a{ /* Middle */
+    position: relative;
+    top: 5em;
+    left: 2%;
     text-align: center;
-    transform: translate(-50%, -65%);
+    text-decoration: none;
     text-decoration: none;
     width: 20em;
     height:20em;
@@ -382,12 +378,12 @@ nav .fa-solid{
     border-radius: 5px;
     background: #2F4858;
 }
-.other-projects-text p4 a{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+.other-projects-text p4 a{ /* Right */
+    position: relative;
+    top: 5em;
+    left: 3%;
     text-align: center;
-    transform: translate(60%, -65%);
+    text-decoration: none;
     text-decoration: none;
     width: 20em;
     height:20em;
@@ -402,7 +398,7 @@ nav .fa-solid{
     background: #2F4858;
 }
 
-/*------------------------------------------------------------------*?
+/*------------------------------------------------------------------*/
 
 /*Mobile support og=700px*/
 @media(max-width: 800px){
@@ -418,7 +414,6 @@ nav .fa-solid{
         padding-inline: 20px;
         word-wrap: break-word;
     }
-
     .text-box pHi{
         font-size: 18px;
         font-weight: 300;
@@ -536,7 +531,7 @@ nav .fa-solid{
     .projects-text{
         position:relative;
         display: inline-block;
-        min-height: 100vh;
+        
         width: auto;
         height: auto;
         top: 10vh;
@@ -546,16 +541,12 @@ nav .fa-solid{
         padding-bottom: 10vh;
     }
     /*Projects*/
-    .projects{
-        min-height: 100vh;
-        width: 100%;
-        position: relative;
-        overflow: hidden;
-    }
     .projects-text{
         position:relative;
         display: inline-block;
-        width: 40em;
+        min-width: 40em;
+        min-height: 100vh;
+        width: auto;
         height: auto;
         top: 20vh;
         left: 0vw;
@@ -600,6 +591,7 @@ nav .fa-solid{
         top: -4.75em;
     }
     .projects-text img.EZHotkey{
+        align-self: center;
         display: inline-block;
         width: 50%;
         height: 50%;
@@ -625,8 +617,8 @@ nav .fa-solid{
     }
     /*Other  projects*/
     .other-projects{
-        min-height: 200vh;
-        height: auto;
+        min-height: 140vh;
+        height: 100vh;
         width: 100%;
         position: relative;
         overflow: hidden;
@@ -638,16 +630,15 @@ nav .fa-solid{
         line-height: 1.5;
         color: #b7c5d3;
         position: relative;
-        top: 0%;
         left: 50%;
-        transform: translate(-50%, 150%);
+        transform: translateX(-50%);
     }
-    .other-projects-text p2 a{ /*Left1*/
-        position: absolute;
-        top: 50%;
+    .other-projects-text p2 a{ /* Left */
+        position: relative;
+        top: 2em;
         left: 50%;
+        transform: translateX(-50%);
         text-align: center;
-        transform: translate(-50%, -180%);
         text-decoration: none;
         width: 20em;
         height:20em;
@@ -661,12 +652,13 @@ nav .fa-solid{
         border-radius: 5px;
         background: #2F4858;
     }
-    .other-projects-text p3 a{ /*Middle1*/
-        position: absolute;
-        top: 50%;
+    .other-projects-text p3 a{ /* Middle */
+        position: relative;
+        top: 4em;
         left: 50%;
+        transform: translateX(-50%);
         text-align: center;
-        transform: translate(-50%, -75%);
+        text-decoration: none;
         text-decoration: none;
         width: 20em;
         height:20em;
@@ -680,12 +672,13 @@ nav .fa-solid{
         border-radius: 5px;
         background: #2F4858;
     }
-    .other-projects-text p4 a{ /*Right1*/
-        position: absolute;
-        top: 50%;
+    .other-projects-text p4 a{ /* Right */
+        position: relative;
+        top: 6em;
         left: 50%;
+        transform: translateX(-50%);
         text-align: center;
-        transform: translate(-50%, 30%);
+        text-decoration: none;
         text-decoration: none;
         width: 20em;
         height:20em;
