text width update

--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@ nav .fa-solid{
     line-height: 1.5;
     color: #b7c5d3;
     display: inline-block;
+    width: 29em;
 }
 .projects-text p5{
     font-size: 18px;
