--- a/style.css
+++ b/style.css
@@ -473,16 +473,16 @@ nav .fa-solid{
 
 /*About me*/
 .about-me{
-    min-height: 100vh;
     height: auto;
     width: 100%;
     position: relative;
     overflow: hidden;
 }
 .contact-text{
+    min-height: 60vh;
+    height: auto;
     position:relative;
     display: inline-block;
-    min-height: 100vh;
     width: 40em;
     top: 10vh;
     left: 20vw;
@@ -564,7 +564,24 @@ nav .fa-solid{
 
 /*------------------------------------------------------------------*/
 
+/*Footer*/
+.footer{
+    display: inline-block;
+    height: auto;
+    min-height: 5vh;
+}
+.footer-text p1{
+    text-align: center;
+    color: #b7c5d3;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/*------------------------------------------------------------------*/
+
 /*Resume*/
+
 
 
 /*Mobile support og=700px*/
@@ -689,6 +706,63 @@ nav .fa-solid{
         color: #b7c5d3;
         word-wrap: break-word;
         padding-bottom: 10vh;
+    }
+
+    /*Experience*/
+    .exp-title{
+        position:relative;
+        display: inline-block;
+        width: auto;
+        height: auto;
+        top: 10vh;
+        left: 0vw;
+        color: #b7c5d3;
+        padding-inline: 20px;
+        word-wrap: break-word;
+    }
+    .exp-title p1{
+        font-size: 50px;
+        font-weight: 500;
+        line-height: 1.5;
+        color: #82FFD8;
+    }
+    .exp-title p2{
+        font-size: 50px;
+        font-weight: 500;
+        line-height: 1.5;
+        color: #D3E1EF;
+    }
+    .exp-title p3{
+        font-size: 28px;
+        inline-size: 40em;
+        line-height: 1.5;
+        color: #B7C5D3;
+    }
+    .exp-title p4{
+        font-size: 22px;
+        inline-size: 40em;
+        line-height: 1.5;
+        color: #82FFD8;
+    }
+    .exp-box{
+        position: relative;
+        top: 10vh;
+        left: 0vw;
+    }
+    .company1{
+        text-decoration: none;
+        font-size: 12px;
+        color: #b7c5d3;
+        border: 2px solid #2F4858;
+        border-left: 2px solid #82FFD8;
+        border-radius: 2px;
+        padding: 5px 10px;
+        font-size: 18px;
+        cursor: pointer;
+    }
+    .company1:hover{
+        background: #2F4858;
+        transition: 1s;
     }
 
     /*Projects*/
