--- a/style.css
+++ b/style.css
@@ -546,6 +546,7 @@ nav .fa-solid{
 }
 .fa-brands:hover {
     color: #82FFD8;
+    transition: 0.5s;
 }
 
 /*------------------------------------------------------------------*/
