updated about me

--- a/style.css
+++ b/style.css
@@ -199,6 +199,12 @@ nav .fa-solid{
     line-height: 1.5;
     color: #B7C5D3;
 }
+.about-text p8{
+    font-size: 18px;
+    inline-size: 40em;
+    line-height: 1.5;
+    color: #B7C5D3;
+}
 .about-text p7{
     font-size: 22px;
     font-weight: 500;
